public routes added

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+
+
+<form method="GET" action="/:id">
+    <input type="search" name="search_query" placeholder="Enter your location..." />
+    <button>Start your search</button>
+</form>
