--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,24 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <header>
+      <img src="https://media.giphy.com/media/F9hQLAVhWnL56/giphy.gif" />
+      <nav>
+
+        {{#if logInUser}}
+        <nav style="color:orange">Welcome back <strong>{{logInUser.userName}}</strong> !</nav>
+        <a href="/settings">User Settings</a>
+        <a href="/logout">Log out</a>
+
+        {{else}}
+        <a href="/login">Log in</a>
+        <a href="/signup">Sign up</a>
+
+        {{/if}}
+      </nav>
+      <hr />
+    </header>
+
 
     {{{body}}}
 
