add Project routes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     <header>
       <img src="https://media.giphy.com/media/F9hQLAVhWnL56/giphy.gif" />
       <nav>
+        <a href="/">Homepage</a>
 
         {{#if logInUser}}
         <nav style="color:orange">Welcome back <strong>{{logInUser.userName}}</strong> !</nav>
