--- a/views/plant-views/plants.hbs
+++ b/views/plant-views/plants.hbs
@@ -7,7 +7,7 @@
         <h4>Common name: {{this.commonName}}</h3>
         <p>Scientific name: {{this.scientificName}}</p>
         {{#each this.plantType}}
-        <p>{{this}}</p>
+        <p>Plant type: {{this}}</p>
         {{/each}}
         <a href="/plants/{{this._id}}">see details</a>
     </li>
