customized user dashboard, Update Project schema, update /project/delete

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,7 @@
         <nav style="color:orange">Welcome back <strong>{{logInUser.userName}}</strong> !</nav>
         <a href="/settings">User Settings</a>
         <a href="/logout">Log out</a>
+        <a href="/center">Projects</a>
 
         {{else}}
         <a href="/login">Log in</a>
