--- a/views/project-views/user-center.hbs
+++ b/views/project-views/user-center.hbs
@@ -1,4 +1,4 @@
-<h2>List of all projects</h2>
+<h2>Project Dashboard</h2>
 
 
 <a href="/project/create"> Create New Project</a>
@@ -11,6 +11,7 @@
     <h4>Location: {{this.location}}</h4>
     <p>Description of the projects: {{this.projectDescription}}</p>
     <button><a href="/project/{{this._id}}">See details</a></button>
+    <button><a href="/project/{{this._id}}/delete">Delete</a></button>
     <br />
     <br />
     {{/each}}
