update save plant to project, needs debug

--- a/views/plant-views/plant-details.hbs
+++ b/views/plant-views/plant-details.hbs
@@ -17,5 +17,5 @@
 <nav>
     <a href="/center">Save to favourites</a>
     <a href="/plants">Return</a>
-    <button><a href="/center">Save to project</a></button>
+    <button><a href="/plants/{{plant._id}}/save">Save to project</a></button>
 </nav>
