--- a/views/project-views/temp-list-projects.hbs
+++ b/views/project-views/temp-list-projects.hbs
@@ -8,6 +8,8 @@
                 <button>save</button>
                 <a href="/project/{{this._id}}">view more</a>
             </label>
+
+            <input type="hidden" value="{{../plantID}}" name="plantID">
         </form>
 
 
