--- a/views/plant-views/plant-details.hbs
+++ b/views/plant-views/plant-details.hbs
@@ -11,7 +11,6 @@
 <p>Bloom Period: {{plant.bloomPeriod}}</p>
 
 <nav>
-    <a href="/center">Save to favourites</a>
-    <a href="/plants">Return</a>
+    <a href="/plants">Return to plants</a>
     <button><a href="/plants/{{plant._id}}/save">Save to project</a></button>
 </nav>
