--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,9 +3,10 @@
 
 
 
-<form method="GET" action="/search/:keyword">
-    <input type="search" name="keyword" placeholder="Enter your location..." />
-    <button>Start your search</button>
+<form method="GET" action="/search">
+    <input type="text" name="search" placeholder="start your search..." >
+    <button type="submit">Search</button>
+
 </form>
 
 <br />
